--- a/Projet_S5_copie/Projet_S5/ajouter.html
+++ b/Projet_S5_copie/Projet_S5/ajouter.html
@@ -3,31 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title data-i18n="title">livraison</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css" />
+<script>
+  if (localStorage.getItem("theme") === "dark") {
+    document.documentElement.classList.add("dark-mode");
+  }
+</script>
+
 </head>
 <body>
     <div class="sidebar">
         <div class="logo">
        <img src="logo-livraison-pour-entreprises_23-2147873004.webp" alt="">
-    </div>
-        <h3>Menu</h3>
+
+ </div>
+        <h3 data-i18n="menu">Menu</h3>
         <ul>
-            <li><a href="index.html">Accueil</a></li>
-            <li><a href="ajouter.html">ajouter une colie</a></li>
-            <li><a href="ramassage.htm">Ramassage</a></li>
-            <li><a href="liste.html">liste des livraison</a></li>
-            <li><a href="modifier.html">Modifier</a></li>
-            <li><a href="ville_tarif.html">liste des tarifs</a></li>
-            <li><a href="statut.html">Statut</a></li>
-            <li><a href="deconnexion.html">Déconnexion</a></li>
+            <li><a href="index.html" data-i18n="home">Accueil</a></li>
+            <li><a href="ajouter.html" data-i18n="add">ajouter une colie</a></li>
+            <li><a href="ramassage.htm" data-i18n="pickup">Ramassage</a></li>
+            <li><a href="liste.html" data-i18n="list">liste des livraison</a></li>
+            <li><a href="modifier.html" data-i18n="modify">Modifier</a></li>
+            <li><a href="ville_tarif.html" data-i18n="prices">liste des tarifs</a></li>
+            <li><a href="statut.html" data-i18n="status">Statut</a></li>
+            <li><a href="deconnexion.html" data-i18n="logout">Déconnexion</a></li>
         </ul>
     </div>
-    <div class="inputs">
-        <label for="">ville ramassage</label>
+   <div class="inputs">
+        <label for="" data-i18n="pickup_city" >ville ramassage</label>
         <input type="text" id="ville_ramassage"> <br>
-        <label for="ville_client">Ville du client :</label>
+        <label for="ville_client" data-i18n="client_city" >Ville du client :</label>
         <select id="ville_client" name="ville_client" required>
-         <option value="">Sélectionnez une ville</option>
+         <option value="" data-i18n="select_city">Sélectionnez une ville</option>
           <option value="Casablanca">Casablanca</option>
          <option value="Rabat">Rabat</option>
          <option value="Marrakech">Marrakech</option>
@@ -44,22 +52,30 @@
          <option value="Laâyoune">Laâyoune</option>
          <option value="Dakhla">Dakhla</option>
         </select>
-        <label for="" >Nom du client<input type="text" id="Nom_client"> </label>
-        <label for="">Montant total <input type="number" id="Montant"></label>
-        <label for="" >Téléphone du client<input type="number" id="telephone_client"> </label>
-        <label for="" >Adresse du client<input type="text" id="Adreese_client"> </label>
-        <label for="" >Produits<input type="text" id="Produit"> </label>
-        <label for="type_livraison">Type de livraison :</label> 
+        <label for="" ><span data-i18n="client_name">Nom du client</span><input type="text" id="Nom_client"> </label>
+        <label for="" ><span data-i18n="amount"> Montant total</span> <input type="number" id="Montant"></label>
+        <label for="" ><span data-i18n="phone_client">Téléphone du client</span><input type="number" id="telephone_client"> </label>
+        <label for=""  > <span data-i18n="address_client">Adresse du client</span><input type="text" id="Adreese_client"> </label>
+        <label for="" ><span data-i18n="products">Produits</span> <input type="text" id="Produit"> </label>
+        <label for="type_livraison" > <span data-i18n="delivery_type">Type de livraison :</span></label> 
         <select id="type_livraison" name="type_livraison" required> 
-            <option value="">Choisissez le type</option> 
-            <option value="standard">Standard</option> 
-            <option value="express">Express</option> 
+            <option value="" data-i18n="choose_type">Choisissez le type</option> 
+            <option value="standard" data-i18n="standard">Standard</option> 
+            <option value="express" data-i18n="express">Express</option> 
         </select>
         
 
-
-<input type="submit" value="Enregistrer" onclick="ajouter(event)">
+<input type="submit" value="Enregistrer" data-i18n-value="save" onclick="ajouter(event)">
 </div>   
+
+<div id="popup" class="popup hidden">
+  <div class="popup-content">
+    <span id="popup-close">&times;</span>
+    <h3 id="popup-title"></h3>
+    <p id="popup-message"></p>
+    <button id="popup-btn">OK</button>
+  </div>
+</div>
 
 
 <script src="ajouter.js"></script>
@@ -79,6 +95,71 @@ body {
     display: flex;
     position: relative;
     overflow-x: hidden;
+}
+/* Mode sombre */
+.dark-mode {
+  background: black ;
+}
+/* Popup styles */
+.popup {
+  position: fixed;
+  inset: 0;
+  background: rgba(0,0,0,0.6);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 9999;
+}
+
+.popup.hidden {
+  display: none;
+}
+
+.popup-content {
+  background: white;
+  padding: 30px;
+  border-radius: 20px;
+  width: 350px;
+  text-align: center;
+  animation: pop 0.3s ease;
+}
+
+@keyframes pop {
+  from { transform: scale(0.7); opacity: 0; }
+  to { transform: scale(1); opacity: 1; }
+}
+
+#popup-close {
+  position: absolute;
+  right: 20px;
+  top: 15px;
+  font-size: 22px;
+  cursor: pointer;
+}
+
+#popup-btn {
+  margin-top: 20px;
+  padding: 10px 25px;
+  border: none;
+  border-radius: 30px;
+  background: #667eea;
+  color: white;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+/* language switcher */
+.language-switcher {
+    margin-bottom: 20px;
+}
+
+.language-switcher select {
+    width: 100%;    
+    padding: 10px;
+    border-radius: 10px;
+    border: none;
+    font-weight: bold;
+    cursor: pointer;
 }
 
 /* Animation de fond dynamique */
@@ -416,6 +497,84 @@ body::before {
     font-weight: 500;
     color: #2d3748;
 }
+/* =========================
+   RTL MODE (Arabic layout)
+   ========================= */
 
+body.rtl {
+  direction: rtl;
+}
+
+/* ===== Sidebar تنتقل لليمين ===== */
+body.rtl .sidebar {
+  left: auto;
+  right: 0;
+}
+
+/* ===== المحتوى الرئيسي ===== */
+body.rtl .main-content {
+  margin-left: 0 !important;
+  margin-right: 280px;
+}
+
+/* ===== الفورم ===== */
+body.rtl .inputs {
+  margin-left: 40px;
+  margin-right: 340px;
+}
+
+/* ===== العناوين والروابط ===== */
+body.rtl .sidebar h3,
+body.rtl .sidebar ul li a {
+  text-align: right;
+}
+
+/* ===== hover يتحرك بالعكس ===== */
+body.rtl .sidebar ul li:hover {
+  transform: translateX(-10px);
+}
+
+/* ===== اللمعة (animation) ===== */
+body.rtl .sidebar ul li a::before {
+  left: auto;
+  right: -100%;
+}
+
+body.rtl .sidebar ul li a:hover::before {
+  right: 100%;
+}
+
+/* ===== labels ===== */
+body.rtl .inputs label::before {
+  margin-right: 0;
+  margin-left: 8px;
+}
+
+/* ===== inputs / select ===== */
+body.rtl input,
+body.rtl select,
+body.rtl textarea {
+  direction: rtl;
+  text-align: right;
+}
+
+/* ===== welcome section ===== */
+body.rtl .welcome-container,
+body.rtl .welcome-container h1,
+body.rtl .welcome-container p {
+  text-align: right;
+}
+
+/* ===== responsive ===== */
+@media (max-width: 768px) {
+  body.rtl .main-content {
+    margin-right: 0;
+  }
+
+  body.rtl .inputs {
+    margin-right: 20px;
+    margin-left: 20px;
+  }
+}
 
 </style>
