--- a/Projet_S5_copie/Projet_S5/graph.html
+++ b/Projet_S5_copie/Projet_S5/graph.html
@@ -3,8 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title >Document</title>
 <link rel="stylesheet" href="graph.css">
+<script>
+  if (localStorage.getItem("theme") === "dark") {
+    document.documentElement.classList.add("dark-mode");
+  }
+</script>
 </head>
 <body>
     
