--- a/Projet_S5_copie/Projet_S5/index.html
+++ b/Projet_S5_copie/Projet_S5/index.html
@@ -3,63 +3,85 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gestion de livraison</title>
-    <link rel="stylesheet" href="index.css">
+    <title data-i18n="title">Gestion de livraison</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css" />
+<script>
+  if (localStorage.getItem("theme") === "dark") {
+    document.documentElement.classList.add("dark-mode");
+  }
+</script>
 </head>
 <body>
-
+   
     <div class="sidebar">
         <div class="logo">
             <img src="logo-livraison-pour-entreprises_23-2147873004.webp" alt="Logo">
+
         </div>
-        <h3>Menu</h3>
+        <h3 data-i18n="menu">Menu</h3>
+
         <ul>
-            <li><a href="index.html">Accueil</a></li>
-            <li><a href="ajouter.html">Ajouter une colis</a></li>
-            <li><a href="ramassage.htm">Ramassage</a></li>
-            <li><a href="liste.html">Liste des livraisons</a></li>
-            <li><a href="modifier.html">Modifier</a></li>
-            <li><a href="ville_tarif.html">Liste des tarifs</a></li>
-            <li><a href="statut.html">Statut</a></li>
-            <li><a href="deconnexion.html">Déconnexion</a></li>
+            <li><a href="index.html" data-i18n="home">Accueil</a></li>
+            <li><a href="ajouter.html" data-i18n="add">Ajouter une colis</a></li>
+            <li><a href="ramassage.htm" data-i18n="pickup">Ramassage</a></li>
+            <li><a href="liste.html" data-i18n="list">Liste des livraisons</a></li>
+            <li><a href="modifier.html" data-i18n="modify">Modifier</a></li>
+            <li><a href="ville_tarif.html" data-i18n="prices">Liste des tarifs</a></li>
+            <li><a href="statut.html" data-i18n="status">Statut</a></li>
+            <li><a href="deconnexion.html" data-i18n="logout">Déconnexion</a></li>
         </ul>
     </div>
 
+<nav class="top-nav">
+  <div class="nav-left">
+       <i  id="toggleDark"></i>
+  </div>
+  <div class="nav-right">
+    <select id="languageSelect">
+      <option value="fr">Français</option>
+      <option value="ar">العربية</option>
+      <option value="en">English</option>
+    </select>
+  </div>
+</nav>
+
+    
+
     <div class="main-content">
         <div class="welcome-container">
-            <h1>Bienvenue sur notre plateforme de livraison</h1>
-            <p class="subtitle">Votre partenaire de confiance pour vos livraisons au Maroc</p>
+            <h1 data-i18n="welcome_message">Bienvenue sur notre plateforme de livraison</h1>
+            <p class="subtitle" data-i18n="subtitle">Votre partenaire de confiance pour vos livraisons au Maroc</p>
             
             <div class="welcome-features">
                 <div class="feature">
                     <div class="icon">📦</div>
-                    <h3>Ajouter un colis</h3>
-                    <p>Créez facilement une nouvelle livraison avec tous les détails</p>
+                    <h3 data-i18n="add_package">Ajouter un colis</h3>
+                    <p data-i18n="add_package_desc">Créez facilement une nouvelle livraison avec tous les détails</p>
                 </div>
                 <div class="feature">
                     <div class="icon">🚚</div>
-                    <h3>Demander un ramassage</h3>
-                    <p>Planifiez le ramassage de vos colis directement depuis votre adresse</p>
+                    <h3 data-i18n="pickup">Demander un ramassage</h3>
+                    <p data-i18n="pickup_desc">Planifiez le ramassage de vos colis directement depuis votre adresse</p>
                 </div>
                 <div class="feature">
                     <div class="icon">📊</div>
-                    <h3>Suivre vos livraisons</h3>
-                    <p>Consultez l'état et l'historique de tous vos colis en temps réel</p>
+                    <h3 data-i18n="track_shipments">Suivre vos livraisons</h3>
+                    <p data-i18n="track_shipments_desc">Consultez l'état et l'historique de tous vos colis en temps réel</p>
                 </div>
                 <div class="feature">
                     <div class="icon">💰</div>
-                    <h3>Tarifs transparents</h3>
-                    <p>Découvrez nos tarifs compétitifs pour toutes les grandes villes</p>
+                    <h3 data-i18n="transparent_prices">Tarifs transparents</h3>
+                    <p data-i18n="transparent_prices_desc">Découvrez nos tarifs compétitifs pour toutes les grandes villes</p>
                 </div>
             </div>
 
             <div class="welcome-cta">
-                <a href="ajouter.html" class="btn-primary">Commencer maintenant</a>
-                <a href="ville_tarif.html" class="btn-secondary">Voir nos tarifs</a>
+                <a href="ajouter.html" class="btn-primary" data-i18n="Commencer">Commencer maintenant</a>
+                <a href="ville_tarif.html" class="btn-secondary" data-i18n="voir_tarifs">Voir nos tarifs</a>
             </div>
         </div>
     </div>
-
+<script src="index.js"></script>
 </body>
 </html>
 <style> 
@@ -87,6 +109,54 @@
     border-radius: 15px;
     box-shadow: 0 8px 32px rgba(0, 0, 0, 0.2);
 }
+
+/* ===== TOP NAV ===== */
+.top-nav {
+  position: fixed;
+  top: 0;
+  left: 280px; 
+  right: 0;
+  height: 70px;
+  background: rgba(255, 255, 255, 0.2);
+  backdrop-filter: blur(20px);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 30px;
+  z-index: 200;
+  border-bottom: 1px solid rgba(255,255,255,0.3);
+}
+
+.nav-left i {
+  font-size: 26px;
+  color: #fff;
+  cursor: pointer;
+}
+
+.nav-right select {
+  padding: 8px 14px;
+  border-radius: 10px;
+  border: none;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+/* Dark mode nav */
+.dark-mode {
+  background: black
+}
+
+.dark-mode .nav-left i {
+  color: #facc15;
+}
+
+/* Responsive */
+@media (max-width: 768px) {
+  .top-nav {
+    left: 0;
+  }
+}
+
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
@@ -95,6 +165,8 @@ body {
     position: relative;
     overflow-x: hidden;
 }
+
+
 
 /* Animation de fond dynamique */
 body::before {
@@ -166,6 +238,7 @@ body::before {
 /* Main Content */
 .main-content {
     margin-left: 280px;
+    margin-top: 70px;;
     padding: 40px;
     position: relative;
     z-index: 10;
@@ -362,5 +435,84 @@ body::before {
 .sidebar::-webkit-scrollbar-thumb {
     background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
     border-radius: 10px;
+}
+/* =========================
+   RTL MODE (Arabic layout)
+   ========================= */
+
+body.rtl {
+  direction: rtl;
+}
+
+/* ===== Sidebar تنتقل لليمين ===== */
+body.rtl .sidebar {
+  left: auto;
+  right: 0;
+}
+
+/* ===== المحتوى الرئيسي ===== */
+body.rtl .main-content {
+  margin-left: 0 !important;
+  margin-right: 280px;
+}
+
+/* ===== الفورم ===== */
+body.rtl .inputs {
+  margin-left: 40px;
+  margin-right: 340px;
+}
+
+/* ===== العناوين والروابط ===== */
+body.rtl .sidebar h3,
+body.rtl .sidebar ul li a {
+  text-align: right;
+}
+
+/* ===== hover يتحرك بالعكس ===== */
+body.rtl .sidebar ul li:hover {
+  transform: translateX(-10px);
+}
+
+/* ===== اللمعة (animation) ===== */
+body.rtl .sidebar ul li a::before {
+  left: auto;
+  right: -100%;
+}
+
+body.rtl .sidebar ul li a:hover::before {
+  right: 100%;
+}
+
+/* ===== labels ===== */
+body.rtl .inputs label::before {
+  margin-right: 0;
+  margin-left: 8px;
+}
+
+/* ===== inputs / select ===== */
+body.rtl input,
+body.rtl select,
+body.rtl textarea {
+  direction: rtl;
+  text-align: right;
+}
+
+/* ===== welcome section ===== */
+body.rtl .welcome-container,
+body.rtl .welcome-container h1,
+body.rtl .welcome-container p {
+  text-align: right;
+}
+
+/* ===== responsive ===== */
+@media (max-width: 768px) {
+  body.rtl .main-content {
+    margin-right: 0;
+  }
+
+  body.rtl .inputs {
+    margin-right: 20px;
+    margin-left: 20px;
+  }
 }
 </style>
