--- a/Projet_S5_copie/Projet_S5/index.html
+++ b/Projet_S5_copie/Projet_S5/index.html
@@ -188,7 +188,7 @@ body::before {
 
 /* Sidebar */
 .sidebar {
-    width: 280px;
+    width: 23%;
     background: rgba(255, 255, 255, 0.15);
     backdrop-filter: blur(20px);
     border-right: 1px solid rgba(255, 255, 255, 0.2);
@@ -482,6 +482,11 @@ body.rtl .sidebar ul li a:hover::before {
   right: 100%;
 }
 
+bodY.rtl .top-nav{
+    position:fixed;
+    right: 22%;
+    left: 0;
+}
 /* ===== labels ===== */
 body.rtl .inputs label::before {
   margin-right: 0;
