--- a/Projet_S5_copie/Projet_S5/dashbord.html
+++ b/Projet_S5_copie/Projet_S5/dashbord.html
@@ -28,6 +28,7 @@
        <a href="#" data-i18n="pickup">Demander un ramassage</a>
        <a href="#" data-i18n="pickup_list">Liste des ramassages</a>
        <a href="#" data-i18n="billing">Facturation</a>
+                    <li><a href="black_liste.html" data-i18n="Black_liste" class="admin_only">Black liste</a></li> 
        <a href="#" data-i18n="returns">Demande de retour</a>
        <a href="#" data-i18n="prices">Tarifs</a>
    </div> 
@@ -49,3 +50,14 @@
 </div>
 </body>
 </html>
+<style>
+  .admin .sidebar ul li .admin_only{
+    display: none;
+}
+</style>
+ 
+
+
+   
+
+
