--- a/Projet_S5_copie/Projet_S5/index.html
+++ b/Projet_S5_copie/Projet_S5/index.html
@@ -28,6 +28,7 @@
             <li><a href="ville_tarif.html" data-i18n="prices">Liste des tarifs</a></li>
             <li><a href="statut.html" data-i18n="status" class="admin_only">Statut</a></li>
             <li><a href="black_liste.html" data-i18n="Black_liste" class="admin_only">Black liste</a></li> 
+            <li><a href="localisation.html" data-i18n="location">Localisation</a></li>
             <li><a href="deconnexion.html" data-i18n="logout">Déconnexion</a></li>
         </ul>
     </div>
