--- a/Projet_S5_copie/Projet_S5/connexion.html
+++ b/Projet_S5_copie/Projet_S5/connexion.html
@@ -29,6 +29,14 @@
     </div>
   </div>
 
+   <div id="popup" class="popup hidden">
+  <div class="popup-content">
+    <span id="popup-close">&times;</span>
+    <h3 id="popup-title"></h3>
+    <p id="popup-message"></p>
+    <button id="popup-btn">OK</button>
+  </div>
+</div>
   <script src="connexion.js"></script>
 </body>
 </html>
@@ -73,6 +81,54 @@ body::before {
 .dark-mode {
   background: black ;
 }
+/* Popup styles */
+.popup {
+  position: fixed;
+  inset: 0;
+  background: rgba(0,0,0,0.6);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 9999;
+}
+
+.popup.hidden {
+  display: none;
+}
+
+.popup-content {
+  background: white;
+  padding: 30px;
+  border-radius: 20px;
+  width: 350px;
+  text-align: center;
+  animation: pop 0.3s ease;
+}
+
+@keyframes pop {
+  from { transform: scale(0.7); opacity: 0; }
+  to { transform: scale(1); opacity: 1; }
+}
+
+#popup-close {
+  position: absolute;
+  right: 20px;
+  top: 15px;
+  font-size: 22px;
+  cursor: pointer;
+}
+
+#popup-btn {
+  margin-top: 20px;
+  padding: 10px 25px;
+  border: none;
+  border-radius: 30px;
+  background: #667eea;
+  color: white;
+  font-weight: bold;
+  cursor: pointer;
+}
+
 /* Conteneur principal centré */
 .container {
     background: rgba(255, 255, 255, 0.15);
