--- a/Projet_S5_copie/Projet_S5/ville_tarif.html
+++ b/Projet_S5_copie/Projet_S5/ville_tarif.html
@@ -23,8 +23,8 @@
             <li><a href="liste.html" data-i18n="list">Liste des livraisons</a></li>
             <li><a href="ville_tarif.html" data-i18n="prices">Liste des tarifs</a></li>
             <li><a href="statut.html" data-i18n="status" class="admin_only">Statut</a></li>
-                         <li><a href="black_liste.html" data-i18n="Black_liste" class="admin_only">Black liste</a></li> 
-
+            <li><a href="black_liste.html" data-i18n="Black_liste" class="admin_only">Black liste</a></li> 
+            <li><a href="localisation.html" data-i18n="location">Localisation</a></li>
             <li><a href="deconnexion.html" data-i18n="logout">Déconnexion</a></li>
         </ul>
     </div>
@@ -64,7 +64,14 @@
             </form>
         </div>
     </div>
-
+<div id="popup" class="popup hidden">
+  <div class="popup-content">
+    <span id="popup-close">&times;</span>
+    <h3 id="popup-title"></h3>
+    <p id="popup-message"></p>
+    <button id="popup-btn">OK</button>
+  </div>
+</div>
     <script src="ville_tarif.js"></script>
 </body>
 </html>
@@ -108,6 +115,54 @@ body::before {
 .dark-mode {
   background: black ;
 }
+/* Popup styles */
+.popup {
+  position: fixed;
+  inset: 0;
+  background: rgba(0,0,0,0.6);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 9999;
+}
+
+.popup.hidden {
+  display: none;
+}
+
+.popup-content {
+  background: white;
+  padding: 30px;
+  border-radius: 20px;
+  width: 350px;
+  text-align: center;
+  animation: pop 0.3s ease;
+}
+
+@keyframes pop {
+  from { transform: scale(0.7); opacity: 0; }
+  to { transform: scale(1); opacity: 1; }
+}
+
+#popup-close {
+  position: absolute;
+  right: 20px;
+  top: 15px;
+  font-size: 22px;
+  cursor: pointer;
+}
+
+#popup-btn {
+  margin-top: 20px;
+  padding: 10px 25px;
+  border: none;
+  border-radius: 30px;
+  background: #667eea;
+  color: white;
+  font-weight: bold;
+  cursor: pointer;
+}
+
 /* Sidebar */
 .sidebar {
     width: 280px;
