--- a/Projet_S5_copie/Projet_S5/ramassage.htm
+++ b/Projet_S5_copie/Projet_S5/ramassage.htm
@@ -21,6 +21,7 @@
         <h3 data-i18n="menu">Menu</h3>
         <ul>
             <li><a href="index.html" data-i18n="home">Accueil</a></li>
+            <li><a href="../dashboard.html" data-i18n="dashboard">Dashboard</a></li>
             <li><a href="ajouter.html" data-i18n="add">ajouter une colie</a></li>
             <li><a href="ramassage.htm" data-i18n="pickup">Ramassage</a></li>
             <li><a href="liste.html" data-i18n="list">liste des livraison</a></li>
