--- a/Projet_S5_copie/Projet_S5/localisation.html
+++ b/Projet_S5_copie/Projet_S5/localisation.html
@@ -19,6 +19,7 @@
         <h3 data-i18n="menu">Menu</h3>
         <ul>
             <li><a href="index.html" data-i18n="home">Accueil</a></li>
+            <li><a href="../dashboard.html" data-i18n="dashboard">Dashboard</a></li>
             <li><a href="ajouter.html" data-i18n="add">Ajouter une colis</a></li>
             <li><a href="ramassage.htm" data-i18n="pickup">Ramassage</a></li>
             <li><a href="liste.html" data-i18n="list">Liste des livraisons</a></li>
